--- a/portfolio.html
+++ b/portfolio.html
@@ -113,7 +113,7 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <h2 class="footer-logo" id="contacts">Web<span class="logostudio-footer">Studio</span></h2>
+    <a href="index.html" class="footer-logo" id="contacts">Web<span class="logostudio-footer">Studio</span></a>
     <address>
       <ul class="footer-menu">
         <li>
