--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
       <a href="index.html" class="logo">Web<span class="logostudio">Studio</span></a>
       <ul class="header-linl-menu">
         <li><a href="index.html" class="header-link">Студія</a></li>
-        <li><a href="#portfolio" class="header-link">Портфоліо</a></li>
+        <li><a href="#portfolio" class="header-link-active">Портфоліо</a></li>
         <li><a href="#contacts" class="header-link">Контакти</a></li>
       </ul>
     </nav>
@@ -54,57 +54,75 @@
       <ul class="our-portf-list">
 
         <li class="card-portf">
-          <img src="./images/port1.jpg" alt="Технокряк" width="370">
-          <h3 class="ourteam-portf-title">Технокряк</h3>
-          <p class="ourteam-portf-text">Веб-сайт</p>
+          <a href="#">
+            <img src="./images/port1.jpg" alt="Технокряк" width="370">
+            <h3 class="ourteam-portf-title">Технокряк</h3>
+            <p class="ourteam-portf-text">Веб-сайт</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
-          <h3 class="ourteam-portf-title">Постер New Orlean vs Golden Star</h3>
-          <p class="ourteam-portf-text">Дизайн</p>
+          <a href="#">
+            <img src="./images/port2.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+            <h3 class="ourteam-portf-title">Постер New Orlean vs Golden Star</h3>
+            <p class="ourteam-portf-text">Дизайн</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
-          <h3 class="ourteam-portf-title">Ресторан Seafood</h3>
-          <p class="ourteam-portf-text">Додаток</p>
+          <a href="#">
+            <img src="./images/port3.jpg" alt="Ресторан Seafood" width="370">
+            <h3 class="ourteam-portf-title">Ресторан Seafood</h3>
+            <p class="ourteam-portf-text">Додаток</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port4.jpg" alt="Проєкт Prime" width="370">
-          <h3 class="ourteam-portf-title">Проєкт Prime</h3>
-          <p class="ourteam-portf-text">Маркетинг</p>
+          <a href="#">
+            <img src="./images/port4.jpg" alt="Проєкт Prime" width="370">
+            <h3 class="ourteam-portf-title">Проєкт Prime</h3>
+            <p class="ourteam-portf-text">Маркетинг</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port5.jpg" alt="Проєкт Boxes" width="370">
-          <h3 class="ourteam-portf-title">Проєкт Boxes</h3>
-          <p class="ourteam-portf-text">Додаток</p>
+          <a href="#">
+            <img src="./images/port5.jpg" alt="Проєкт Boxes" width="370">
+            <h3 class="ourteam-portf-title">Проєкт Boxes</h3>
+            <p class="ourteam-portf-text">Додаток</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
-          <h3 class="ourteam-portf-title">Inspiration has no Borders</h3>
-          <p class="ourteam-portf-text">Веб-сайт</p>
+          <a href="#">
+            <img src="./images/port6.jpg" alt="Inspiration has no Borders" width="370">
+            <h3 class="ourteam-portf-title">Inspiration has no Borders</h3>
+            <p class="ourteam-portf-text">Веб-сайт</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port7.jpg" alt="Видання Limited Edition" width="370">
-          <h3 class="ourteam-portf-title">Видання Limited Edition</h3>
-          <p class="ourteam-portf-text">Дизайн</p>
+          <a href="#">
+            <img src="./images/port7.jpg" alt="Видання Limited Edition" width="370">
+            <h3 class="ourteam-portf-title">Видання Limited Edition</h3>
+            <p class="ourteam-portf-text">Дизайн</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port8.jpg" alt="Проєкт LAB" width="370">
-          <h3 class="ourteam-portf-title">Проєкт LAB</h3>
-          <p class="ourteam-portf-text">Маркетинг</p>
+          <a href="#">
+            <img src="./images/port8.jpg" alt="Проєкт LAB" width="370">
+            <h3 class="ourteam-portf-title">Проєкт LAB</h3>
+            <p class="ourteam-portf-text">Маркетинг</p>
+          </a>
         </li>
 
         <li class="card-portf">
-          <img src="./images/port9.jpg" alt="Growing Business" width="370">
-          <h3 class="ourteam-portf-title">Growing Business</h3>
-          <p class="ourteam-portf-text">Додаток</p>
+          <a href="#">
+            <img src="./images/port9.jpg" alt="Growing Business" width="370">
+            <h3 class="ourteam-portf-title">Growing Business</h3>
+            <p class="ourteam-portf-text">Додаток</p>
+          </a>
         </li>
       </ul>
 
