--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="top-menu">
       <a href="#" class="logo">Web<span class="logostudio">Studio</span></a>
       <ul class="header-linl-menu">
-        <li><a href="#about" class="header-link">Студія</a></li>
+        <li><a href="#about" class="header-link-active">Студія</a></li>
         <li><a href="portfolio.html" class="header-link">Портфоліо</a></li>
         <li><a href="#contacts" class="header-link">Контакти</a></li>
       </ul>
